--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- 引入清除默认的样式 -->
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_3411311_60whsu3ddua.css">
 
   </head>
   <body>
